# 2DVelocityCorrelation

./: .gitignore  README.md  calc_spiral_corr.py  pyproject.toml  setup.cfg  setup.py
src/: inplanevelcorr.py  utils.py
tests/: .gitignore  test_inplanevelcorr.py  test_utils.py  test_velocitycorrelation2D.py  test_velutils.py
tests/test_assets/find_conversion_factor/: basic_1.csv  basic_2.csv  basic_3.csv  basic_4.csv  basic_results.csv  different_scale_1.csv  different_scale_2.csv  different_scale_results.csv
velocitycorrelation2D/: __init__.py  correlation.py  utils.py  velocitycorrelation2D.py  velutils.py
velocitycorrelation2D.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
